Changed new URL(String) to URI.create(String).toURL()